# backend-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_SUMMARY.md  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
alembic/: env.py  script.py.mako
models/: base.py
services/: __init__.py  repositories.py  schemas.py  service.py
settings/: __init__.py  app.py  auth.py  doc.py  env.py  logs.py  postgres.py  s3.py  sentry.py  settings.py  telemetry.py
web/: app.py  auth.py  endpoints.py
web/endpoints/: __init__.py  default.py  example.py
