[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["web", "models", "services", "settings"]
exclude = ["tests*", "alembic*", "logs*"]

[project]
name = "template"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    # Core framework
    "adc-webkit",
    "adc-appkit",
    "adc-logger",
    "adc-aiopg",
    "adc-aios3",
    # Settings and validation
    "pydantic-settings>=2.2.0",

    # Utilities
    "click>=8.1.7",

    # HTTP client
    "aiohttp>=3.9.0",

    # Monitoring
    "sentry-sdk>=2.26.1",
    
    # CLI
    "uvloop>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-xdist>=3.7.0",
    "coverage[toml]>=7.9.1",
    "ruff>=0.12.1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "bandit>=1.8.5",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.13.1",
]

# Tool configurations
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "T20", # flake8-print
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "PTH", # flake8-use-pathlib
    "PLR", # pylint refactor
    "PLW", # pylint warnings
    "PLE", # pylint errors
]
ignore = [
    "COM812",  # trailing comma; formatter handles this
    "E501",    # line too long, handled by formatter
    "B008",    # do not perform function calls in argument defaults
    "C901",    # too complex
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "PLR0912", # too many branches
    "S101",    # use of assert detected
    "S603",    # subprocess call - check for execution of untrusted input
    "S607",    # starting a process with a partial executable path
    "RET502",  # do not implicitly return None in function able to return non-None value
    "RET503",  # missing explicit return at end of function able to return non-None value
    "RET504",  # unnecessary assignment before return
]
exclude = [
    ".git",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "logs",
    "tmp",
    "alembic",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]
"models/*.py" = ["TC003"]
"web/endpoints/*.py" = ["TC001", "F841"]
"settings/*.py" = ["S105"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = false
warn_unreachable = true
strict_equality = false
disallow_any_explicit = false
ignore_errors = false
ignore_missing_imports = true
local_partial_types = true
strict_optional = false
disable_error_code = ["valid-type", "misc"]
follow_imports = "silent"
exclude = [
    "\\.git",
    "\\.venv",
    "\\.mypy_cache",
    "\\.pytest_cache",
    "\\.ruff_cache",
    "logs",
    "tmp",
    "alembic",
    ".*\\.egg-info",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["manage"]
disallow_untyped_defs = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.coverage.run]
source = ["web", "models", "services", "settings"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/alembic/*",
    "*/logs/*",
    "*/tmp/*",
    "*/.venv/*",
    "*/.mypy_cache/*",
    "*/.pytest_cache/*",
    "*/.ruff_cache/*",
    "*/*.egg-info/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = [
    "tests",
    "test_*",
    ".git",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "logs",
    "tmp",
    "alembic",
    "*.egg-info",
    "build",
    "dist",
]
skips = ["B101", "B601"]
